<resources>
    <string name="app_name">Randomiser</string>
    <string name="clickButton">Нажми на кнопку</string>
    <string name="deleteTextButton">Стереть текст</string>
    <string name="cancel">Cancel</string>
    <string name="fire">OK</string>
    <string name="dialog_fire_missiles">Just click </string>
    <string name="dialog_title">Pick color for background </string>
    <string name="white">White </string>
    <string name="green">Green </string>
    <string name="blue">Blue </string>
    <string name="second_activity">second activity</string>
    <string name="bgColor">Поменять цвет фона</string>
    <string name="infoAbout">Заполнить/Изменить информацию о себе</string>
    <string name="save_data">Сохранить информацию</string>
    <string name="name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="dob">Дата рождения</string>
    <string name="email">Email</string>
    <string name="number">Номер телефона</string>
    <string name="load_data">Загрузить информацию</string>
    <string name="backToMain">Вернуться на главную</string>
    <string name="clear">Очистить поля</string>
    <string name="about">О бо мне</string>
    <string name="ready">Готово</string>
    <string name="aboutText">About me</string>
    <string name="info_about_me">заполните информацию о себе</string>
    <string name="weather_dialog">ВЫ хотите глянуть погоду?</string>
    <string name="City">Город</string>
    <string name="show_weather">Show weather</string>
    <string name="weather">Погода</string>
    <string name="arrow"><![CDATA[<-]]></string>
</resources>
