<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginVertical="200dp"
    android:layout_marginLeft="50dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="16sp"
        android:text="@string/dialog_title"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnBlue"

            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/blue" />

        <Button
            android:id="@+id/btnWhite"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/white" />

        <Button
            android:id="@+id/btnGreen"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/green" />
    </LinearLayout>
</LinearLayout>